--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
+:root {
+  --primary-color: #3488a9;
+}
+
 body {
   background-color: azure;
   font-family: 'Poppins', sans-serif;
@@ -17,7 +21,7 @@ h5,
 h6 {
   font-size: 24px;
   font-weight: bold;
-  color: #3488a9;
+  color: var(--primary-color);
 }
 
 p {
@@ -80,7 +84,7 @@ header {
 
 /* link inside .nav-menu-list */
 header .nav-menu a {
-  color: #3488a9;
+  color: var(--primary-color);
 }
 
 /* TOP CONTAINER */
@@ -186,6 +190,23 @@ header .nav-menu a {
   list-style-type: none;
 }
 
+#projects {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #ccc;
+}
+
+#projects h2 {
+  width: 100%;
+}
+
+#projects ul {
+  margin-bottom: 10px;
+}
+
 /* CONNECT */
 #connect {
   display: flex;
@@ -218,7 +239,7 @@ header .nav-menu a {
 .form-header {
   font-size: 24px;
   font-weight: 500;
-  color: #3488a9;
+  color: var(--primary-color);
   padding: 10px;
 }
 
@@ -260,7 +281,7 @@ textarea {
   width: 80%;
   padding: 10px;
   color: rgb(13, 13, 13);
-  border: 1px solid #3488a9;
+  border: 1px solid var(--primary-color);
   border-radius: 5px;
 }
 
@@ -268,7 +289,7 @@ textarea {
   padding: 10px;
   background: #cef200;
   color: rgb(13, 13, 13);
-  border: 1px solid #3488a9;
+  border: 1px solid var(--primary-color);
   border-radius: 5px;
 }
 
@@ -290,9 +311,9 @@ textarea {
 
 .submit-btn {
   padding: 10px;
-  background: #3488a9;
+  background: var(--primary-color);
   color: white;
-  border: 1px solid #3488a9;
+  border: 1px solid var(--primary-color);
   border-radius: 5px;
   align-self: flex-start;
   margin-top: 10px;
@@ -301,7 +322,7 @@ textarea {
 footer {
   background-color: #eaeaea;
   padding: 20px;
-  color: #3488a9;
+  color: var(--primary-color);
 }
 
 .social-media-links {
